deploy/dev/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: microk8s-app-dev-daemonset
  namespace: microk8s-app-dev
  labels:
    app: microk8s-app
spec:
  selector:
    matchLabels:
      app: microk8s-app
  template:
    metadata:
      labels:
        app: microk8s-app
    spec:
      hostNetwork: true
      containers:
        - name: microk8s-app
          image: 335145105741.dkr.ecr.ap-northeast-2.amazonaws.com/microk8s-app:latest
          ports:
            - containerPort: 10000
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              port: 10000
              path: /alive
            initialDelaySeconds: 20
            periodSeconds: 100
            failureThreshold: 3
      imagePullSecrets:
        - name: regcred
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/microk8s-controlplane
                    operator: NotIn
                    values:
                      - microk8s-controlplane
      terminationGracePeriodSeconds: 1800
      dnsPolicy: Default
      dnsConfig:
        nameservers:
          - 8.8.8.8
        searches:
          - 8.8.4.4
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 100%
    type: RollingUpdate
