deploy/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-nginx
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: instaget.worker.type
                    operator: In
                    values:
                      - ingress
      containers:
        - name: controller
          image: registry.k8s.io/ingress-nginx/controller:v1.6.4
          args:
            - /nginx-ingress-controller
